# arm_memo

./: CMakeLists.txt  instrinsics.md  readme.md  toolchain-rpi.cmake
example/: CMakeLists.txt  arithmetic.cpp  compare.cpp  layout.cpp  load_store.cpp  reciprocal_inv.cpp  reciprocal_square.cpp  suffix.cpp
